--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,6 @@ attrs==24.2.0
     #   referencing
 certifi==2024.8.30
     # via requests
-cffi==1.17.1
-    # via cryptography
 cfgv==3.4.0
     # via pre-commit
 chardet==5.2.0
@@ -24,8 +22,6 @@ click==8.1.7
     # via typer
 coverage==7.6.1
     # via pytest-cov
-cryptography==43.0.1
-    # via pyopenssl
 defopt==6.4.0
     # via hdx-python-api
 distlib==0.3.8
@@ -42,26 +38,26 @@ email-validator==2.2.0
     # via hdx-python-api
 et-xmlfile==1.1.0
     # via openpyxl
-filelock==3.16.0
+filelock==3.16.1
     # via virtualenv
-frictionless==5.17.1
+frictionless==5.18.0
     # via hdx-python-utilities
-hdx-python-api==6.3.3
+hdx-python-api==6.3.4
     # via hdx-scraper-hno (pyproject.toml)
 hdx-python-country==3.7.8
     # via
     #   hdx-scraper-hno (pyproject.toml)
     #   hdx-python-api
-hdx-python-utilities==3.7.3
+hdx-python-utilities==3.7.4
     # via
     #   hdx-scraper-hno (pyproject.toml)
     #   hdx-python-api
     #   hdx-python-country
 humanize==4.10.0
     # via frictionless
-identify==2.6.0
+identify==2.6.1
     # via pre-commit
-idna==3.8
+idna==3.10
     # via
     #   email-validator
     #   requests
@@ -91,7 +87,7 @@ libhxl==5.2.1
     #   hdx-python-country
 loguru==0.7.2
     # via hdx-python-utilities
-makefun==1.15.4
+makefun==1.15.6
     # via hdx-python-api
 markdown-it-py==3.0.0
     # via rich
@@ -103,8 +99,6 @@ mdurl==0.1.2
     # via markdown-it-py
 more-itertools==10.5.0
     # via inflect
-ndg-httpsclient==0.5.1
-    # via hdx-python-api
 nodeenv==1.9.1
     # via pre-commit
 num2words==0.5.13
@@ -115,7 +109,7 @@ packaging==24.1
     # via pytest
 petl==1.7.15
     # via frictionless
-platformdirs==4.3.2
+platformdirs==4.3.6
     # via virtualenv
 pluggy==1.5.0
     # via pytest
@@ -127,28 +121,21 @@ pockets==0.9.1
     # via sphinxcontrib-napoleon
 pre-commit==3.8.0
     # via hdx-scraper-hno (pyproject.toml)
-pyasn1==0.6.0
-    # via
-    #   hdx-python-api
-    #   ndg-httpsclient
-pycparser==2.22
-    # via cffi
-pydantic==2.9.0
+pydantic==2.9.2
     # via frictionless
-pydantic-core==2.23.2
+pydantic-core==2.23.4
     # via pydantic
 pygments==2.18.0
     # via rich
-pyopenssl==24.2.1
-    # via
-    #   hdx-python-api
-    #   ndg-httpsclient
 pyphonetics==0.5.3
     # via hdx-python-country
-pytest==8.3.2
+pytest==8.3.3
     # via
     #   hdx-scraper-hno (pyproject.toml)
+    #   pytest-check
     #   pytest-cov
+pytest-check==2.4.1
+    # via hdx-scraper-hno (pyproject.toml)
 pytest-cov==5.0.0
     # via hdx-scraper-hno (pyproject.toml)
 python-dateutil==2.9.0.post0
@@ -186,7 +173,7 @@ requests-file==2.1.0
     # via hdx-python-utilities
 rfc3986==2.0.0
     # via frictionless
-rich==13.8.0
+rich==13.8.1
     # via typer
 rpds-py==0.20.0
     # via
@@ -196,7 +183,7 @@ ruamel-yaml==0.18.6
     # via hdx-python-utilities
 ruamel-yaml-clib==0.2.8
     # via ruamel-yaml
-setuptools==74.1.2
+setuptools==75.1.0
     # via ckanapi
 shellingham==1.5.4
     # via typer
@@ -234,19 +221,17 @@ typing-extensions==4.12.2
     #   pydantic-core
     #   typeguard
     #   typer
-tzdata==2024.1
-    # via pydantic
 unidecode==1.3.8
     # via
     #   libhxl
     #   pyphonetics
-urllib3==2.2.2
+urllib3==2.2.3
     # via
     #   libhxl
     #   requests
 validators==0.34.0
     # via frictionless
-virtualenv==20.26.4
+virtualenv==20.26.6
     # via pre-commit
 wheel==0.44.0
     # via libhxl
