--- a/src/hdx/scraper/hno/config/project_configuration.yaml
+++ b/src/hdx/scraper/hno/config/project_configuration.yaml
@@ -43,3 +43,441 @@ population_status:
   "expectedReach":
     "header": "Reached"
     "tag": "#reached"
+
+# *** For old resource ***
+old_hxltags:
+  "Country ISO3": "#country+code"
+  "Admin 1 PCode": "#adm1+code"
+  "Admin 2 PCode": "#adm2+code"
+  "Sector": "#sector+code"
+  "Gender": "#gender+code"
+  "Age Range": "#age+range"
+  "Min Age": "#age+min"
+  "Max Age": "#age+max"
+  "Disabled": "#is_disabled"
+  "Population Group": "#population_group+code"
+  "Population": "#population"
+  "In Need": "#inneed"
+  "Targeted": "#targeted"
+  "Affected": "#affected"
+  "Reached": "#reached"
+
+category:
+  "total": { }
+  "adult":
+    "min_age": 18
+    "max_age": 64
+  "children":
+    "min_age": 0
+    "max_age": 17
+  "elderly":
+    "min_age": 65
+    "max_age": ~
+  "female":
+    "gender": "f"
+  "male":
+    "gender": "m"
+  "adult - female":
+    "gender": "f"
+    "min_age": 18
+    "max_age": 64
+  "adult - women":
+    "gender": "f"
+    "min_age": 18
+    "max_age": 64
+  "adult women":
+    "gender": "f"
+    "min_age": 18
+    "max_age": 64
+  "women":
+    "gender": "f"
+    "min_age": 18
+    "max_age": 64
+  "femmes":
+    "gender": "f"
+    "min_age": 18
+    "max_age": 64
+  "mujeres":
+    "gender": "f"
+    "min_age": 18
+    "max_age": 64
+  "adult - male":
+    "gender": "m"
+    "min_age": 18
+    "max_age": 64
+  "adult - men":
+    "gender": "m"
+    "min_age": 18
+    "max_age": 64
+  "adult men":
+    "gender": "m"
+    "min_age": 18
+    "max_age": 64
+  "men":
+    "gender": "m"
+    "min_age": 18
+    "max_age": 64
+  "hommes":
+    "gender": "m"
+    "min_age": 18
+    "max_age": 64
+  "hombres":
+    "gender": "m"
+    "min_age": 18
+    "max_age": 64
+  "children - female":
+    "gender": "f"
+    "min_age": 0
+    "max_age": 17
+  "girls":
+    "gender": "f"
+    "min_age": 0
+    "max_age": 17
+  "filles":
+    "gender": "f"
+    "min_age": 0
+    "max_age": 17
+  "niñas":
+    "gender": "f"
+    "min_age": 0
+    "max_age": 17
+  "children - male":
+    "gender": "m"
+    "min_age": 0
+    "max_age": 17
+  "boys":
+    "gender": "m"
+    "min_age": 0
+    "max_age": 17
+  "garcons":
+    "gender": "m"
+    "min_age": 0
+    "max_age": 17
+  "niños":
+    "gender": "m"
+    "min_age": 0
+    "max_age": 17
+  "elderly - female":
+    "gender": "f"
+    "min_age": 65
+    "max_age": ~
+  "elderly - women":
+    "gender": "f"
+    "min_age": 65
+    "max_age": ~
+  "elderly women":
+    "gender": "f"
+    "min_age": 65
+    "max_age": ~
+  "elderly - male":
+    "gender": "m"
+    "min_age": 65
+    "max_age": ~
+  "elderly - men":
+    "gender": "m"
+    "min_age": 65
+    "max_age": ~
+  "elderly men":
+    "gender": "m"
+    "min_age": 65
+    "max_age": ~
+  "people with disabilities":
+    "disabled": "y"
+  "people with disability":
+    "disabled": "y"
+  "persons with disabilities":
+    "disabled": "y"
+  "disability":
+    "disabled": "y"
+  "handicap":
+    "disabled": "y"
+  "personas con discapacidad":
+    "disabled": "y"
+  "adult - female - personas con discapacidad":
+    "gender": "f"
+    "min_age": 18
+    "max_age": 64
+    "disabled": "y"
+  "adult - male - personas con discapacidad":
+    "gender": "m"
+    "min_age": 18
+    "max_age": 64
+    "disabled": "y"
+  "children - female - personas con discapacidad":
+    "gender": "f"
+    "min_age": 0
+    "max_age": 17
+    "disabled": "y"
+  "children - male - personas con discapacidad":
+    "gender": "m"
+    "min_age": 0
+    "max_age": 17
+    "disabled": "y"
+  "elderly - female - personas con discapacidad":
+    "gender": "f"
+    "min_age": 65
+    "max_age": ~
+    "disabled": "y"
+  "elderly - male - personas con discapacidad":
+    "gender": "m"
+    "min_age": 65
+    "max_age": ~
+    "disabled": "y"
+  "idp - total":
+    "group": "IDP"
+  "idp":
+    "group": "IDP"
+  "idps":
+    "group": "IDP"
+  "adult - female - idp":
+    "gender": "f"
+    "min_age": 18
+    "max_age": 64
+    "group": "IDP"
+  "adult - male - idp":
+    "gender": "m"
+    "min_age": 18
+    "max_age": 64
+    "group": "IDP"
+  "children - female - idp":
+    "gender": "f"
+    "min_age": 0
+    "max_age": 17
+    "group": "IDP"
+  "children - male - idp":
+    "gender": "m"
+    "min_age": 0
+    "max_age": 17
+    "group": "IDP"
+  "elderly - female - idp":
+    "gender": "f"
+    "min_age": 65
+    "max_age": ~
+    "group": "IDP"
+  "pdi":
+    "group": "IDP"
+  "elderly - male - idp":
+    "gender": "m"
+    "min_age": 65
+    "max_age": ~
+    "group": "IDP"
+  "adult - female - pdi":
+    "gender": "f"
+    "min_age": 18
+    "max_age": 64
+    "group": "IDP"
+  "adult - male - pdi":
+    "gender": "m"
+    "min_age": 18
+    "max_age": 64
+    "group": "IDP"
+  "children - female - pdi":
+    "gender": "f"
+    "min_age": 0
+    "max_age": 17
+    "group": "IDP"
+  "children  - female - pdi":
+    "gender": "f"
+    "min_age": 0
+    "max_age": 17
+    "group": "IDP"
+  "children - male - pdi":
+    "gender": "m"
+    "min_age": 0
+    "max_age": 17
+    "group": "IDP"
+  "children  -  male - pdi":
+    "gender": "m"
+    "min_age": 0
+    "max_age": 17
+    "group": "IDP"
+  "elderly - female - pdi":
+    "gender": "f"
+    "min_age": 65
+    "max_age": ~
+    "group": "IDP"
+  "elderly - male - pdi":
+    "gender": "m"
+    "min_age": 65
+    "max_age": ~
+    "group": "IDP"
+  "refugees - total":
+    "group": "REF"
+  "réfugiés":
+    "group": "REF"
+  "refugees":
+    "group": "REF"
+  "adult - female - refugees":
+    "gender": "f"
+    "min_age": 18
+    "max_age": 64
+    "group": "REF"
+  "adult - male - refugees":
+    "gender": "m"
+    "min_age": 18
+    "max_age": 64
+    "group": "REF"
+  "children - female - refugees":
+    "gender": "f"
+    "min_age": 0
+    "max_age": 17
+    "group": "REF"
+  "children - male - refugees":
+    "gender": "m"
+    "min_age": 0
+    "max_age": 17
+    "group": "REF"
+  "elderly - female - refugees":
+    "gender": "f"
+    "min_age": 65
+    "max_age": ~
+    "group": "REF"
+  "elderly - male - refugees":
+    "gender": "m"
+    "min_age": 65
+    "max_age": ~
+    "group": "REF"
+  "returnees - total":
+    "group": "RRI"
+  "returnees":
+    "group": "RRI"
+  "retournés":
+    "group": "RRI"
+  "adult - female - returnees":
+    "gender": "f"
+    "min_age": 18
+    "max_age": 64
+    "group": "RRI"
+  "adult - male - returnees":
+    "gender": "m"
+    "min_age": 18
+    "max_age": 64
+    "group": "RRI"
+  "children - female - returnees":
+    "gender": "f"
+    "min_age": 0
+    "max_age": 17
+    "group": "RRI"
+  "children - male - returnees":
+    "gender": "m"
+    "min_age": 0
+    "max_age": 17
+    "group": "RRI"
+  "elderly - female - returnees":
+    "gender": "f"
+    "min_age": 65
+    "max_age": ~
+    "group": "RRI"
+  "elderly - male - returnees":
+    "gender": "m"
+    "min_age": 65
+    "max_age": ~
+    "group": "RRI"
+  "rapatries":
+    "group": "RRI"
+  "adult - female - rapatries":
+    "gender": "f"
+    "min_age": 18
+    "max_age": 64
+    "group": "RRI"
+  "adult - male - rapatries":
+    "gender": "m"
+    "min_age": 18
+    "max_age": 64
+    "group": "RRI"
+  "children - female - rapatries":
+    "gender": "f"
+    "min_age": 0
+    "max_age": 17
+    "group": "RRI"
+  "children - male - rapatries":
+    "gender": "m"
+    "min_age": 0
+    "max_age": 17
+    "group": "RRI"
+  "children - male -rapatries":
+    "gender": "m"
+    "min_age": 0
+    "max_age": 17
+    "group": "RRI"
+  "elderly - female - rapatries":
+    "gender": "f"
+    "min_age": 65
+    "max_age": ~
+    "group": "RRI"
+  "elderly - male - rapatries":
+    "gender": "m"
+    "min_age": 65
+    "max_age": ~
+    "group": "RRI"
+  "retournes":
+    "group": "RRI"
+  "adult - female - retournes":
+    "gender": "f"
+    "min_age": 18
+    "max_age": 64
+    "group": "RRI"
+  "adult - male - retournes":
+    "gender": "m"
+    "min_age": 18
+    "max_age": 64
+    "group": "RRI"
+  "children - female - retournes":
+    "gender": "f"
+    "min_age": 0
+    "max_age": 17
+    "group": "RRI"
+  "children - male - retournes":
+    "gender": "m"
+    "min_age": 0
+    "max_age": 17
+    "group": "RRI"
+  "elderly - female - retournes":
+    "gender": "f"
+    "min_age": 65
+    "max_age": ~
+    "group": "RRI"
+  "elderly - male - retournes":
+    "gender": "m"
+    "min_age": 65
+    "max_age": ~
+    "group": "RRI"
+  "host communities":
+    "group": "HST"
+  "hostcommunities":
+    "group": "HST"
+  "communauté hôte":
+    "group": "HST"
+  "host communities - total":
+    "group": "HST"
+  "adult - female - host communities":
+    "gender": "f"
+    "min_age": 18
+    "max_age": 64
+    "group": "HST"
+  "adult - male - host communities":
+    "gender": "m"
+    "min_age": 18
+    "max_age": 64
+    "group": "HST"
+  "children - female - host communities":
+    "gender": "f"
+    "min_age": 0
+    "max_age": 17
+    "group": "HST"
+  "children - male - host communities":
+    "gender": "m"
+    "min_age": 0
+    "max_age": 17
+    "group": "HST"
+  "elderly - female - host communities":
+    "gender": "f"
+    "min_age": 65
+    "max_age": ~
+    "group": "HST"
+  "elderly - male - host communities":
+    "gender": "m"
+    "min_age": 65
+    "max_age": ~
+    "group": "HST"
+# ***                  ***
