--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,9 +34,9 @@ classifiers = [
 requires-python = ">=3.8"
 
 dependencies = [
-    "hdx-python-api>= 6.3.2",
-    "hdx-python-country>= 3.7.7",
-    "hdx-python-utilities>= 3.7.3",
+    "hdx-python-api>= 6.3.4",
+    "hdx-python-country>= 3.8.1",
+    "hdx-python-utilities>= 3.7.4",
 ]
 dynamic = ["version"]
 
@@ -48,7 +48,7 @@ content-type = "text/markdown"
 Homepage = "https://github.com/OCHA-DAP/hdx-scraper-hno"
 
 [project.optional-dependencies]
-test = ["pytest", "pytest-cov"]
+test = ["pytest", "pytest-check", "pytest-cov"]
 dev = ["pre-commit"]
 
 
