--- a/requirements.txt
+++ b/requirements.txt
@@ -14,17 +14,17 @@ cfgv==3.4.0
     # via pre-commit
 chardet==5.2.0
     # via frictionless
-charset-normalizer==3.3.2
+charset-normalizer==3.4.0
     # via requests
 ckanapi==4.8
     # via hdx-python-api
 click==8.1.7
     # via typer
-coverage==7.6.1
+coverage==7.6.4
     # via pytest-cov
 defopt==6.4.0
     # via hdx-python-api
-distlib==0.3.8
+distlib==0.3.9
     # via virtualenv
 dnspython==2.7.0
     # via email-validator
@@ -36,7 +36,7 @@ docutils==0.21.2
     # via defopt
 email-validator==2.2.0
     # via hdx-python-api
-et-xmlfile==1.1.0
+et-xmlfile==2.0.0
     # via openpyxl
 filelock==3.16.1
     # via virtualenv
@@ -44,7 +44,7 @@ frictionless==5.18.0
     # via hdx-python-utilities
 hdx-python-api==6.3.4
     # via hdx-scraper-hno (pyproject.toml)
-hdx-python-country==3.8.1
+hdx-python-country==3.8.3
     # via
     #   hdx-scraper-hno (pyproject.toml)
     #   hdx-python-api
@@ -73,7 +73,7 @@ jinja2==3.1.4
     # via frictionless
 jsonlines==4.0.0
     # via hdx-python-utilities
-jsonpath-ng==1.6.1
+jsonpath-ng==1.7.0
     # via libhxl
 jsonschema==4.23.0
     # via
@@ -81,7 +81,7 @@ jsonschema==4.23.0
     #   tableschema-to-template
 jsonschema-specifications==2024.10.1
     # via jsonschema
-libhxl==5.2.1
+libhxl==5.2.2
     # via
     #   hdx-python-api
     #   hdx-python-country
@@ -93,7 +93,7 @@ markdown-it-py==3.0.0
     # via rich
 marko==2.1.2
     # via frictionless
-markupsafe==3.0.1
+markupsafe==3.0.2
     # via jinja2
 mdurl==0.1.2
     # via markdown-it-py
@@ -136,7 +136,7 @@ pytest==8.3.3
     #   pytest-cov
 pytest-check==2.4.1
     # via hdx-scraper-hno (pyproject.toml)
-pytest-cov==5.0.0
+pytest-cov==6.0.0
     # via hdx-scraper-hno (pyproject.toml)
 python-dateutil==2.9.0.post0
     # via
@@ -173,21 +173,21 @@ requests-file==2.1.0
     # via hdx-python-utilities
 rfc3986==2.0.0
     # via frictionless
-rich==13.9.2
+rich==13.9.4
     # via typer
-rpds-py==0.20.0
+rpds-py==0.20.1
     # via
     #   jsonschema
     #   referencing
 ruamel-yaml==0.18.6
     # via hdx-python-utilities
-ruamel-yaml-clib==0.2.8
+ruamel-yaml-clib==0.2.12
     # via ruamel-yaml
-setuptools==75.1.0
+setuptools==75.3.0
     # via ckanapi
 shellingham==1.5.4
     # via typer
-simpleeval==1.0.0
+simpleeval==1.0.3
     # via frictionless
 simplejson==3.19.3
     # via ckanapi
@@ -207,9 +207,11 @@ tableschema-to-template==0.0.13
     # via hdx-python-utilities
 tabulate==0.9.0
     # via frictionless
+tenacity==9.0.0
+    # via hdx-python-country
 text-unidecode==1.3
     # via python-slugify
-typeguard==4.3.0
+typeguard==4.4.1
     # via inflect
 typer==0.12.5
     # via frictionless
@@ -230,7 +232,7 @@ urllib3==2.2.3
     #   requests
 validators==0.34.0
     # via frictionless
-virtualenv==20.26.6
+virtualenv==20.27.1
     # via pre-commit
 wheel==0.44.0
     # via libhxl
