--- a/.github/workflows/run-python-script.yaml
+++ b/.github/workflows/run-python-script.yaml
@@ -5,7 +5,7 @@ name: Run script
 on:
   workflow_dispatch: # add run button in github
   schedule:
-    - cron: "27 21 * * 6"
+    - cron: "27 21 * * *"
 
 jobs:
   run:
