--- a/requirements.txt
+++ b/requirements.txt
@@ -2,25 +2,27 @@
 #    uv pip compile pyproject.toml --resolver=backtracking --all-extras -o requirements.txt
 annotated-types==0.7.0
     # via pydantic
-attrs==24.2.0
+attrs==24.3.0
     # via
     #   frictionless
     #   jsonlines
     #   jsonschema
     #   referencing
-certifi==2024.8.30
+cachetools==5.5.0
+    # via google-auth
+certifi==2024.12.14
     # via requests
 cfgv==3.4.0
     # via pre-commit
 chardet==5.2.0
     # via frictionless
-charset-normalizer==3.4.0
+charset-normalizer==3.4.1
     # via requests
 ckanapi==4.8
     # via hdx-python-api
-click==8.1.7
+click==8.1.8
     # via typer
-coverage==7.6.8
+coverage==7.6.10
     # via pytest-cov
 defopt==6.4.0
     # via hdx-python-api
@@ -42,20 +44,34 @@ filelock==3.16.1
     # via virtualenv
 frictionless==5.18.0
     # via hdx-python-utilities
-hdx-python-api==6.3.5
-    # via hdx-scraper-hno (pyproject.toml)
-hdx-python-country==3.8.5
+google-auth==2.37.0
+    # via
+    #   google-auth-oauthlib
+    #   gspread
+google-auth-oauthlib==1.2.1
+    # via gspread
+gspread==6.1.4
+    # via hdx-python-scraper
+hdx-python-api==6.3.7
+    # via
+    #   hdx-scraper-hno (pyproject.toml)
+    #   hdx-python-scraper
+hdx-python-country==3.8.6
     # via
     #   hdx-scraper-hno (pyproject.toml)
     #   hdx-python-api
-hdx-python-utilities==3.7.4
+    #   hdx-python-scraper
+hdx-python-scraper==2.5.4
+    # via hdx-scraper-hno (pyproject.toml)
+hdx-python-utilities==3.8.2
     # via
     #   hdx-scraper-hno (pyproject.toml)
     #   hdx-python-api
     #   hdx-python-country
+    #   hdx-python-scraper
 humanize==4.11.0
     # via frictionless
-identify==2.6.2
+identify==2.6.5
     # via pre-commit
 idna==3.10
     # via
@@ -63,13 +79,13 @@ idna==3.10
     #   requests
 ijson==3.3.0
     # via hdx-python-utilities
-inflect==7.4.0
+inflect==7.5.0
     # via quantulum3
 iniconfig==2.0.0
     # via pytest
 isodate==0.7.2
     # via frictionless
-jinja2==3.1.4
+jinja2==3.1.5
     # via frictionless
 jsonlines==4.0.0
     # via hdx-python-utilities
@@ -85,7 +101,7 @@ libhxl==5.2.2
     # via
     #   hdx-python-api
     #   hdx-python-country
-loguru==0.7.2
+loguru==0.7.3
     # via hdx-python-utilities
 makefun==1.15.6
     # via hdx-python-api
@@ -97,12 +113,14 @@ markupsafe==3.0.2
     # via jinja2
 mdurl==0.1.2
     # via markdown-it-py
-more-itertools==10.5.0
+more-itertools==10.6.0
     # via inflect
 nodeenv==1.9.1
     # via pre-commit
-num2words==0.5.13
+num2words==0.5.14
     # via quantulum3
+oauthlib==3.2.2
+    # via requests-oauthlib
 openpyxl==3.1.5
     # via hdx-python-utilities
 packaging==24.2
@@ -121,15 +139,21 @@ pockets==0.9.1
     # via sphinxcontrib-napoleon
 pre-commit==4.0.1
     # via hdx-scraper-hno (pyproject.toml)
-pydantic==2.10.1
+pyasn1==0.6.1
+    # via
+    #   pyasn1-modules
+    #   rsa
+pyasn1-modules==0.4.1
+    # via google-auth
+pydantic==2.10.5
     # via frictionless
-pydantic-core==2.27.1
+pydantic-core==2.27.2
     # via pydantic
-pygments==2.18.0
+pygments==2.19.1
     # via rich
 pyphonetics==0.5.3
-    # via hdx-python-country
-pytest==8.3.3
+    # via hdx-python-utilities
+pytest==8.3.4
     # via
     #   hdx-scraper-hno (pyproject.toml)
     #   pytest-check
@@ -162,6 +186,8 @@ referencing==0.35.1
     # via
     #   jsonschema
     #   jsonschema-specifications
+regex==2024.11.6
+    # via hdx-python-scraper
 requests==2.32.3
     # via
     #   ckanapi
@@ -169,21 +195,26 @@ requests==2.32.3
     #   hdx-python-api
     #   libhxl
     #   requests-file
+    #   requests-oauthlib
 requests-file==2.1.0
     # via hdx-python-utilities
+requests-oauthlib==2.0.0
+    # via google-auth-oauthlib
 rfc3986==2.0.0
     # via frictionless
 rich==13.9.4
     # via typer
-rpds-py==0.21.0
+rpds-py==0.22.3
     # via
     #   jsonschema
     #   referencing
-ruamel-yaml==0.18.6
+rsa==4.9
+    # via google-auth
+ruamel-yaml==0.18.10
     # via hdx-python-utilities
 ruamel-yaml-clib==0.2.12
     # via ruamel-yaml
-setuptools==75.6.0
+setuptools==75.8.0
     # via ckanapi
 shellingham==1.5.4
     # via typer
@@ -191,7 +222,7 @@ simpleeval==1.0.3
     # via frictionless
 simplejson==3.19.3
     # via ckanapi
-six==1.16.0
+six==1.17.0
     # via
     #   ckanapi
     #   pockets
@@ -213,7 +244,7 @@ text-unidecode==1.3
     # via python-slugify
 typeguard==4.4.1
     # via inflect
-typer==0.13.1
+typer==0.15.1
     # via frictionless
 typing-extensions==4.12.2
     # via
@@ -226,13 +257,13 @@ unidecode==1.3.8
     # via
     #   libhxl
     #   pyphonetics
-urllib3==2.2.3
+urllib3==2.3.0
     # via
     #   libhxl
     #   requests
 validators==0.34.0
     # via frictionless
-virtualenv==20.27.1
+virtualenv==20.29.0
     # via pre-commit
 wheel==0.45.1
     # via libhxl
