--- a/requirements.txt
+++ b/requirements.txt
@@ -182,7 +182,7 @@ quantulum3==0.9.2
     # via hdx-python-api
 ratelimit==2.2.1
     # via hdx-python-utilities
-referencing==0.35.1
+referencing==0.36.0
     # via
     #   jsonschema
     #   jsonschema-specifications
@@ -232,7 +232,7 @@ sphinxcontrib-napoleon==0.7
     # via defopt
 stringcase==1.2.0
     # via frictionless
-structlog==24.4.0
+structlog==25.1.0
     # via libhxl
 tableschema-to-template==0.0.13
     # via hdx-python-utilities
@@ -251,6 +251,7 @@ typing-extensions==4.12.2
     #   frictionless
     #   pydantic
     #   pydantic-core
+    #   referencing
     #   typeguard
     #   typer
 unidecode==1.3.8
