--- a/src/hdx/scraper/hno/config/project_configuration.yaml
+++ b/src/hdx/scraper/hno/config/project_configuration.yaml
@@ -45,3 +45,46 @@ population_status:
   "expectedReach":
     "header": "Reached"
     "tag": "#reached"
+
+population_status_mapping:
+  "Population": "ALL"
+  "In Need": "INN"
+  "Targeted": "TGT"
+  "Affected": "AFF"
+  "Reached": "REA"
+
+hapi_dataset:
+  name: "hdx-hapi-humanitarian-needs"
+  title: "HDX HAPI - Affected People: Humanitarian Needs"
+  tags:
+    - "hxl"
+    - "humanitarian needs overview - hno"
+    - "people in need - pin"
+  dataset_source: "OCHA Humanitarian Programme Cycle Tools (HPC Tools)"
+  license_id: "cc-by-igo"
+  resource:
+    name: "Global Affected People: Humanitarian Needs"
+    description: "Humanitarian needs data from HDX HAPI, please see [the documentation](https://hdx-hapi.readthedocs.io/en/latest/data_usage_guides/affected_people/#humanitarian-needs) for more information"
+    filename: "hdx_hapi_humanitarian_needs_global"
+    hxltags:
+      "location_code": "#country+code"
+      "has_hrp": "#meta+has_hrp"
+      "in_gho": "#meta+in_gho"
+      "provider_admin1_name": "#adm1+name+provider"
+      "provider_admin2_name": "#adm2+name+provider"
+      "admin1_code": "#adm1+code"
+      "admin1_name": "#adm1+name"
+      "admin2_code": "#adm2+code"
+      "admin2_name": "#adm2+name"
+      "admin_level": "#adm+level"
+      "sector_code": "#sector+cluster+code"
+      "sector_name": "#sector+cluster+name"
+      "category": "#category"
+      "population_status": "#population+status"
+      "population": "#population"
+      "reference_period_start": "#date+start"
+      "reference_period_end": "#date+end"
+      "dataset_hdx_id": "#meta+dataset_id"
+      "resource_hdx_id": "#meta+resource_id"
+      "warning": "#meta+warning"
+      "error": "#meta+error"
