population status enum has lowercase all

--- a/src/hdx/scraper/hno/config/project_configuration.yaml
+++ b/src/hdx/scraper/hno/config/project_configuration.yaml
@@ -47,7 +47,7 @@ population_status:
     "tag": "#reached"
 
 population_status_mapping:
-  "Population": "ALL"
+  "Population": "all"
   "In Need": "INN"
   "Targeted": "TGT"
   "Affected": "AFF"
