--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 #    uv pip compile pyproject.toml --resolver=backtracking --all-extras -o requirements.txt
 annotated-types==0.7.0
     # via pydantic
-attrs==25.1.0
+attrs==25.3.0
     # via
     #   frictionless
     #   jsonlines
@@ -22,7 +22,7 @@ ckanapi==4.8
     # via hdx-python-api
 click==8.1.8
     # via typer
-coverage==7.6.12
+coverage==7.7.1
     # via pytest-cov
 defopt==6.4.0
     # via hdx-python-api
@@ -40,9 +40,9 @@ email-validator==2.2.0
     # via hdx-python-api
 et-xmlfile==2.0.0
     # via openpyxl
-filelock==3.17.0
+filelock==3.18.0
     # via virtualenv
-frictionless==5.18.0
+frictionless==5.18.1
     # via hdx-python-utilities
 google-auth==2.38.0
     # via
@@ -50,28 +50,28 @@ google-auth==2.38.0
     #   gspread
 google-auth-oauthlib==1.2.1
     # via gspread
-gspread==6.1.4
+gspread==6.2.0
     # via hdx-python-scraper
 hdx-python-api==6.3.8
     # via
     #   hdx-scraper-hno (pyproject.toml)
     #   hdx-python-scraper
-hdx-python-country==3.8.8
+hdx-python-country==3.9.2
     # via
     #   hdx-scraper-hno (pyproject.toml)
     #   hdx-python-api
     #   hdx-python-scraper
 hdx-python-scraper==2.6.3
     # via hdx-scraper-hno (pyproject.toml)
-hdx-python-utilities==3.8.4
+hdx-python-utilities==3.8.5
     # via
     #   hdx-scraper-hno (pyproject.toml)
     #   hdx-python-api
     #   hdx-python-country
     #   hdx-python-scraper
-humanize==4.12.1
+humanize==4.12.2
     # via frictionless
-identify==2.6.7
+identify==2.6.9
     # via pre-commit
 idna==3.10
     # via
@@ -81,11 +81,11 @@ ijson==3.3.0
     # via hdx-python-utilities
 inflect==7.5.0
     # via quantulum3
-iniconfig==2.0.0
+iniconfig==2.1.0
     # via pytest
 isodate==0.7.2
     # via frictionless
-jinja2==3.1.5
+jinja2==3.1.6
     # via frictionless
 jsonlines==4.0.0
     # via hdx-python-utilities
@@ -127,7 +127,7 @@ packaging==24.2
     # via pytest
 petl==1.7.15
     # via frictionless
-platformdirs==4.3.6
+platformdirs==4.3.7
     # via virtualenv
 pluggy==1.5.0
     # via pytest
@@ -137,28 +137,28 @@ ply==3.11
     #   libhxl
 pockets==0.9.1
     # via sphinxcontrib-napoleon
-pre-commit==4.1.0
+pre-commit==4.2.0
     # via hdx-scraper-hno (pyproject.toml)
 pyasn1==0.6.1
     # via
     #   pyasn1-modules
     #   rsa
-pyasn1-modules==0.4.1
+pyasn1-modules==0.4.2
     # via google-auth
-pydantic==2.10.6
+pydantic==2.11.0
     # via frictionless
-pydantic-core==2.27.2
+pydantic-core==2.33.0
     # via pydantic
 pygments==2.19.1
     # via rich
 pyphonetics==0.5.3
     # via hdx-python-utilities
-pytest==8.3.4
+pytest==8.3.5
     # via
     #   hdx-scraper-hno (pyproject.toml)
     #   pytest-check
     #   pytest-cov
-pytest-check==2.5.0
+pytest-check==2.5.1
     # via hdx-scraper-hno (pyproject.toml)
 pytest-cov==6.0.0
     # via hdx-scraper-hno (pyproject.toml)
@@ -204,7 +204,7 @@ rfc3986==2.0.0
     # via frictionless
 rich==13.9.4
     # via typer
-rpds-py==0.23.0
+rpds-py==0.24.0
     # via
     #   jsonschema
     #   referencing
@@ -214,7 +214,7 @@ ruamel-yaml==0.18.10
     # via hdx-python-utilities
 ruamel-yaml-clib==0.2.12
     # via ruamel-yaml
-setuptools==75.8.0
+setuptools==78.1.0
     # via ckanapi
 shellingham==1.5.4
     # via typer
@@ -230,9 +230,7 @@ six==1.17.0
     #   sphinxcontrib-napoleon
 sphinxcontrib-napoleon==0.7
     # via defopt
-stringcase==1.2.0
-    # via frictionless
-structlog==25.1.0
+structlog==25.2.0
     # via libhxl
 tableschema-to-template==0.0.13
     # via hdx-python-utilities
@@ -244,9 +242,9 @@ text-unidecode==1.3
     # via python-slugify
 typeguard==4.4.2
     # via inflect
-typer==0.15.1
+typer==0.15.2
     # via frictionless
-typing-extensions==4.12.2
+typing-extensions==4.13.0
     # via
     #   frictionless
     #   pydantic
@@ -254,6 +252,9 @@ typing-extensions==4.12.2
     #   referencing
     #   typeguard
     #   typer
+    #   typing-inspection
+typing-inspection==0.4.0
+    # via pydantic
 unidecode==1.3.8
     # via
     #   libhxl
@@ -264,7 +265,7 @@ urllib3==2.3.0
     #   requests
 validators==0.34.0
     # via frictionless
-virtualenv==20.29.2
+virtualenv==20.29.3
     # via pre-commit
 wheel==0.45.1
     # via libhxl
