--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,19 +8,24 @@ repos:
       - id: end-of-file-fixer
       - id: check-ast
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.9.6
+    rev: v0.9.10
     hooks:
       # Run the linter.
       - id: ruff
-        args: [--config, .config/ruff.toml, --fix]
+        args: [ --fix ]
       # Run the formatter.
       - id: ruff-format
-        args: [--config, .config/ruff.toml]
   - repo: https://github.com/astral-sh/uv-pre-commit
-    rev: 0.6.1
+    rev: 0.6.5
     hooks:
       # Run the pip compile
       - id: pip-compile
         name: pip-compile requirements.txt
         files: pyproject.toml
-        args: [ pyproject.toml, --resolver=backtracking, --all-extras, --upgrade, -q, -o, requirements.txt ]
+        args: [ pyproject.toml, --resolver=backtracking, --upgrade, -q,
+                -o, requirements.txt ]
+      - id: pip-compile
+        name: pip-compile requirements-test.txt
+        files: pyproject.toml
+        args: [ pyproject.toml, --resolver=backtracking, --upgrade, -q,
+                --extra, test, -c, requirements.txt, -o, requirements-test.txt ]
