--- a/src/hdx/scraper/hno/config/project_configuration.yaml
+++ b/src/hdx/scraper/hno/config/project_configuration.yaml
@@ -5,7 +5,7 @@ max_admin: 5
 
 resource_description: "This resource contains standardised <> Humanitarian Needs Overview data taken from the OCHA HPC Tools system which is under active development."
 resource_description_extra: "For more detailed but less standardized data on humanitarian needs, see the resources below."
-
+resource_p_coded: True
 
 hxltags:
   "Country ISO3": "#country+code"
@@ -66,6 +66,7 @@ hapi_dataset:
     name: "Global Affected People: Humanitarian Needs"
     description: "Humanitarian needs data from HDX HAPI, please see [the documentation](https://hdx-hapi.readthedocs.io/en/latest/data_usage_guides/affected_people/#humanitarian-needs) for more information"
     filename: "hdx_hapi_humanitarian_needs_global"
+    p_coded: True
     hxltags:
       "location_code": "#country+code"
       "has_hrp": "#meta+has_hrp"
