--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -35,7 +35,7 @@ click==8.1.8
     # via
     #   -c requirements.txt
     #   typer
-coverage==7.8.1
+coverage==7.8.2
     # via pytest-cov
 defopt==6.4.0
     # via
@@ -312,10 +312,14 @@ rsa==4.9.1
     # via
     #   -c requirements.txt
     #   google-auth
-ruamel-yaml==0.18.10
+ruamel-yaml==0.18.11
     # via
     #   -c requirements.txt
     #   hdx-python-utilities
+ruamel-yaml-clib==0.2.12
+    # via
+    #   -c requirements.txt
+    #   ruamel-yaml
 setuptools==80.8.0
     # via
     #   -c requirements.txt
