--- a/requirements.txt
+++ b/requirements.txt
@@ -178,8 +178,10 @@ rpds-py==0.25.1
     #   referencing
 rsa==4.9.1
     # via google-auth
-ruamel-yaml==0.18.10
+ruamel-yaml==0.18.11
     # via hdx-python-utilities
+ruamel-yaml-clib==0.2.12
+    # via ruamel-yaml
 setuptools==80.8.0
     # via ckanapi
 shellingham==1.5.4
