--- a/.github/workflows/run-python-script.yaml
+++ b/.github/workflows/run-python-script.yaml
@@ -4,8 +4,8 @@ name: Run script
 
 on:
   workflow_dispatch: # add run button in github
-  schedule:
-    - cron: "27 21 * * *"
+#  schedule:
+#    - cron: "27 21 * * *"
 
 jobs:
   run:
