--- a/src/hdx/scraper/hno/config/project_configuration.yaml
+++ b/src/hdx/scraper/hno/config/project_configuration.yaml
@@ -66,25 +66,25 @@ hapi_dataset:
     description: "Humanitarian needs data from HDX HAPI, please see [the documentation](https://hdx-hapi.readthedocs.io/en/latest/data_usage_guides/affected_people/#humanitarian-needs) for more information"
     filename: "hdx_hapi_humanitarian_needs_global"
     p_coded: True
-    hxltags:
-      "location_code": "#country+code"
-      "has_hrp": "#meta+has_hrp"
-      "in_gho": "#meta+in_gho"
-      "provider_admin1_name": "#adm1+name+provider"
-      "provider_admin2_name": "#adm2+name+provider"
-      "admin1_code": "#adm1+code"
-      "admin1_name": "#adm1+name"
-      "admin2_code": "#adm2+code"
-      "admin2_name": "#adm2+name"
-      "admin_level": "#adm+level"
-      "sector_code": "#sector+cluster+code"
-      "sector_name": "#sector+cluster+name"
-      "category": "#category"
-      "population_status": "#population+status"
-      "population": "#population"
-      "reference_period_start": "#date+start"
-      "reference_period_end": "#date+end"
-      "dataset_hdx_id": "#meta+dataset_id"
-      "resource_hdx_id": "#meta+resource_id"
-      "warning": "#meta+warning"
-      "error": "#meta+error"
+    headers:
+      - "location_code"
+      - "has_hrp"
+      - "in_gho"
+      - "provider_admin1_name"
+      - "provider_admin2_name"
+      - "admin1_code"
+      - "admin1_name"
+      - "admin2_code"
+      - "admin2_name"
+      - "admin_level"
+      - "sector_code"
+      - "sector_name"
+      - "category"
+      - "population_status"
+      - "population"
+      - "reference_period_start"
+      - "reference_period_end"
+      - "dataset_hdx_id"
+      - "resource_hdx_id"
+      - "warning"
+      - "error"
