--- a/src/hdx/scraper/hno/config/project_configuration.yaml
+++ b/src/hdx/scraper/hno/config/project_configuration.yaml
@@ -3,6 +3,12 @@ global_all_pcodes: "https://data.humdata.org/dataset/cb963915-d7d1-4ffa-90dc-312
 
 max_admin: 5
 
+time_periods:
+  2025:
+    start_date: "2025-01-01"
+    end_date: "2025-12-08"
+
+
 resource_description: "This resource contains standardised <> Humanitarian Needs Overview data taken from the OCHA HPC Tools system which is under active development."
 resource_description_extra: "For more detailed but less standardized data on humanitarian needs, see the resources below."
 
